deployment/xyz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factle-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: factle
  template:
    metadata:
      labels:
        app: factle
    spec:
      containers:
        - name: factle-app
          image: docker.io/kylesadler5/factle:1.4
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: factle-service
spec:
  type: LoadBalancer
  selector:
    app: factle
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factle-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: factle-xyz-cert
    kubernetes.io/ingress.global-static-ip-name: factle-xyz
    networking.gke.io/v1beta1.FrontendConfig: ssl-redirect
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: factle.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: factle-service
                port:
                  number: 80
